--- a/Benedetti.css
+++ b/Benedetti.css
@@ -122,7 +122,7 @@ border: 1px solid #000000;
     position: relative;
     left: 12vw;
     bottom: clamp(85px,16.7vw,700px);
-    word-break: break-all;
+    word-break: keep-all;
     width: 52vw;
     border: 1px solid #000000;
     }
@@ -148,8 +148,8 @@ width: min-content;
     display: flex;
     align-items: stretch;
     top: 36.603vw;
-
-    width: 100%;
+    left: 3.4%;
+    width: 85%;
 height: min-content;
 overflow: hidden;
 flex-grow: 0;
