--- a/Benedetti.css
+++ b/Benedetti.css
@@ -115,7 +115,7 @@ font-size: clamp(10px,1.528vw,700px);
 
 word-break: keep-all;
 width: 25vw;
-border: 1px solid #000000;
+
 }
 .card-text-g{
     font-size: clamp(10px,1.528vw,700px);
@@ -124,7 +124,7 @@ border: 1px solid #000000;
     bottom: clamp(85px,16.7vw,700px);
     word-break: keep-all;
     width: 52vw;
-    border: 1px solid #000000;
+   
     }
 .card.mb-3-2{
     background-color: rgb(215,5,5, 0.2);
@@ -178,6 +178,10 @@ flex-grow: 0;
 /*footer*/
 .container-fluid.footer{
     background-image: url(Background.png);
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     position: relative;
     top: 50vw;
     height: 100vw;
@@ -196,8 +200,11 @@ flex-grow: 0;
     right: 7%;
 }
 .container-fluid.map{
+    width: 100%;
+    height: 100%;
     position: relative;
-    top: 55.1vw;
+    top: 49vw;
+
 }
 .container-fluid.ff{
     background-color: gray;
@@ -228,28 +235,11 @@ top: 30px;
     }
 .ctitulo1 ,.ctitulo2, .ctitulo3{
     color: rgb(215, 5,5);
-    font-size: 2.5vw;
+    font-size: 2.5vw; 
+
 }
-.ctitulo1{
-    position: relative;
-    left: 2.1vw;
-}
-.ctitulo2{
-    position: relative;
-    left: 5.4vw;
-}
-.ctitulo3{
-    position: relative;
-    left: 7.5vw;
-}
-.card-text-3{
-    position: relative;
-    left: 5.5vw;
-}
-.card-text-4{
-    position: relative;
-    left: 1.3vw;
-}
+
+
 .forms{
     background-color:  rgb(215, 5,5);
     position: relative;
@@ -259,27 +249,24 @@ top: 30px;
     border-radius: 2%;
 }
 .ftitulo{
-    font-size: 3.5vw;
+    font-size: 2.5vw;
     position: relative;
-    top: 9vw;
-    left: 16vw;
-    font-weight: bold;
+   
+   
     color: #000000;    
 }
 .formulario{
     position: relative;
-    left: 70px;
-    top: 50px;
+   
     font-size: clamp(7.9px,1.528vw,700px);
 }
 input{
-    height: 20px;  
+    height: 50px; 
+    width: 250px;
+ 
 }
 
-.msgbox{
-    width: 200px;
-    height: 100px;
-}
+
 .ftlogo{
     position: relative;
     bottom: 17.7vw;
@@ -290,14 +277,24 @@ input{
 iframe{
     border: 0;
     width: 102%;
-    position: relative;
-    right: 15px;
-    bottom: 69px;
+   
    
 }
 .direitos{
     font-size: clamp(10px,2vw,20px);
-    position: relative;
-    left: 25.6vw;
-    top: 1.8vw;
+
+}
+label{
+    color: #000000;
+}
+
+textarea{
+    height: 200px;
+width: 350px;
+}
+.form-group {
+    display: grid;
+    grid-template-columns: 150px 1fr; /* Define duas colunas */
+    align-items: start; /* Alinha no topo */
+    gap: 10px; /* Espaço entre colunas */
 }
